Fixed capitalization of img src route

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             </div>
           </div>
           <div class="col-lg-6 px-4 landingimage mt-4">
-              <img src="images/HeroImage.svg" alt="" class="purpleimage w-100">
+              <img src="Images/HeroImage.svg" alt="" class="purpleimage w-100">
           </div>
       </div>
     </div>
@@ -85,9 +85,9 @@
     <div class="container py-5 mt-5">
           <h1 class="headers text-center">Trusted by</h1>
           <div class="row d-flex justify-content-center align-items-center text-center py-4">
-            <div class="col-lg-4"><img src="images/Companies3.svg" alt="" class="svg logo1 w-50"></div>
-            <div class="col-lg-4"><img src="images/Companies2.svg" alt="" class="svg logo1 w-25"></div>
-            <div class="col-lg-4"><img src="images/Companies1.svg" alt="" class="svg logo1 w-50"></div>
+            <div class="col-lg-4"><img src="Images/Companies3.svg" alt="" class="svg logo1 w-50"></div>
+            <div class="col-lg-4"><img src="Images/Companies2.svg" alt="" class="svg logo1 w-25"></div>
+            <div class="col-lg-4"><img src="Images/Companies1.svg" alt="" class="svg logo1 w-50"></div>
         </div>
       </div>
     </div>
